Fix: Gallery pic in relationship input too large

--- a/www/comps/valueRich.css
+++ b/www/comps/valueRich.css
@@ -96,10 +96,9 @@
 .value-rich.context-list-input .barcode,
 .value-rich.context-list-input .drawing,
 .value-rich.context-list-input .gallery-item{
-	/* default row height - 2px for vert. margins */
-	min-width:calc(var(--row-height) - 2px);
-	max-height:calc(var(--row-height) - 2px);
-	margin:1px 5px 1px 0px;
+	min-width:var(--row-height-content);
+	max-height:var(--row-height-content);
+	margin:0px 5px 0px 0px;
 }
 
 /* calendar context */
